--- a/extranet/src/main/resources/application.properties
+++ b/extranet/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/extranet
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
