--- a/extranet/src/main/resources/application.properties
+++ b/extranet/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/extranet2
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
