--- a/extranet/src/main/resources/application.properties
+++ b/extranet/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/piero
+spring.datasource.username=root
+spring.datasource.password=Alpha_123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
