--- a/extranet/src/main/resources/application.properties
+++ b/extranet/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/piero
+spring.datasource.url=jdbc:mysql://localhost:3306/extranet
 spring.datasource.username=root
-spring.datasource.password=Alpha_123
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
