--- a/extranet/pom.xml
+++ b/extranet/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.corso.isc</groupId>
+	<groupId>com.gruppo.isc</groupId>
 	<artifactId>extranet</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>extranet</name>
-	<description>articoli-web-service</description>
+	<description>Extranet</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -33,8 +33,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -46,6 +46,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
