--- a/extranet/src/main/resources/application.properties
+++ b/extranet/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/piero
+spring.datasource.url=jdbc:mysql://localhost:3306/extranet
 spring.datasource.username=root
 spring.datasource.password=Alpha_123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
